Implementação dos serviços e conexão com o banco.

--- a/Commerce.API/appsettings.Development.json
+++ b/Commerce.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "OracleConnection": "User Id=DB.ALEXANDRELIMA;Password=vnu8cJVJK67ZqwL;Data Source=ecommerce_high;Wallet_Location=C:\\Users\\xande\\Source\\Repos\\xandelucas\\Commerce\\Commerce.Infrastructure\\Wallet\\"
   }
 }
