--- a/Commerce.Infrastructure/Commerce.Infrastructure.csproj
+++ b/Commerce.Infrastructure/Commerce.Infrastructure.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.130" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Commerce.Application\Commerce.Application.csproj" />
     <ProjectReference Include="..\Commerce.Domain\Commerce.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Wallet\" />
   </ItemGroup>
 
 </Project>
