Ajustes na conexão e implementação do Unit of Work

--- a/Commerce.API/appsettings.Development.json
+++ b/Commerce.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "User Id=DB.ALEXANDRELIMA;Password=vnu8cJVJK67ZqwL;Data Source=ecommerce_high;Wallet_Location=C:\\Users\\xande\\Source\\Repos\\xandelucas\\Commerce\\Commerce.Infrastructure\\Wallet\\"
+    "OracleConnection": "User Id=ADMIN;Password=Ale123456789;Data Source=ecommerce_high"
   }
 }
