--- a/Commerce.API/appsettings.json
+++ b/Commerce.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "DBContext": "Data Source=DBContext-5b4ead19-51b0-4dc4-a7e4-ae76f54ffc60.db"
+    "OracleConnection": "User Id=ADMIN;Password=Ale123456789;Data Source=ecommerce_high"
   }
 }
