Inclusão do projeto de testes e ajustes nos métodos.

--- a/Commerce.API/appsettings.json
+++ b/Commerce.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "OracleConnection": "User Id=ADMIN;Password=Ale123456789;Data Source=ecommerce_high"
+    "SQLServer": "Server=tcp:commerce-xande.database.windows.net,1433;Initial Catalog=commerce;Persist Security Info=False;User ID=xande;Password=iX@M84BQ6iffNEa;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
