feat: Adiciona nova entidade e melhora na validação com FluentValidator
- Adiciona a nova entidade 'Categoria' para organizar produtos por categorias.
- Implementa o FluentValidator para validar a entrada de dados em todas as entidades.

--- a/Commerce.API/appsettings.json
+++ b/Commerce.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SQLServer": "Server=tcp:commerce-xande.database.windows.net,1433;Initial Catalog=commerce;Persist Security Info=False;User ID=xande;Password=iX@M84BQ6iffNEa;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SQLServer": "host=localhost;port=5432;Database=Commerce;username=AlexandreLima;password=12345678;"
   }
 }
